<?xml version="1.0"?>
<package>
  <name>orne_navigation_executor_add_movable_layer</name>
  <version>0.1.3</version>
  <description>The orne_navigation package add movable layer</description>
  
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>yocs_waypoints_navi</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>yocs_waypoints_navi</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
